# aemlib

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
core/: client.c  core.c  core.h  log.c  status.c
examples/: CMakeLists.txt  mqtt_broker_demo.c  posix_tcp_transport.c  posix_tcp_transport.h  pubsub_demo.c  smoke_test.c
include/aemlib/: aemlib.h  config.h  log.h  status.h
platform/: storage.h  time.h  time_iface.h  transport.h  virtual_transport.c  virtual_transport.h
proto/: proto.c  proto.h
tests/: CMakeLists.txt  main.c  test_client.c  test_core.c  test_proto.c  test_virtual_transport.c
